# share-rs

./: .gitignore  Cargo.toml  README-CN.md  README.md
locales/: app.yml
script/: generate_entities.sh  share-rs.desktop
src/: assets.rs  backend.rs  gpui_tokio.rs  main.rs  mimes.rs  setting.rs  single_instance.rs  ui.rs  util.rs
src/backend/: db.rs
src/backend/db/: repository.rs
src/backend/entities/: chunks.rs  mod.rs  prelude.rs  shares.rs  uploads.rs
src/backend/web/: handlers.rs  server.rs
src/backend/web/handlers/: downloads.rs  uploads.rs
src/migrator/: m20250816_000002_create_chunks_table.rs  m20250816_000002_create_shares_table.rs  m20250816_000002_create_uploads_table.rs  mod.rs
src/ui/: file_list_page.rs  root_view.rs  server_info_page.rs  settings_page.rs  title_bar.rs
src/ui/component/: input.rs
web/: next.config.ts  package-lock.json  package.json
web/src/app/: globals.css  layout.tsx  page.tsx
web/src/app/api/: batch-upload-manager.ts  hash-worker-manager.ts  hash.worker.ts  request.ts  upload-manager.ts
web/src/component/: header-bar.tsx
web/src/pages/: upload.tsx
