[package]
name = "share-rs"
version = "0.1.0"
edition = "2024"

[dependencies]
gpui = { git = "https://github.com/zed-industries/zed" }
gpui-component = { git = "https://github.com/longbridge/gpui-component.git"}
actix-web = "4"
anyhow = "1.0.98"
rust-embed = { version = "8.7.2", features = ["include-exclude"]}
rust-i18n = "3.1.5"
serde_json = "1.0.142"
serde = { version = "1.0.219", features = ["derive"] }
log = "0.4.27"
env_logger = "0.11.8"
futures = "0.3.31"
tokio = { version = "1.47.1", features = ["rt-multi-thread"] }
sea-orm = { version = "1.1.14", features = [ "sqlx-sqlite", "runtime-tokio", "macros" ] }
sea-orm-migration ={version =  "1.1.14", features = ["sqlx-sqlite", "runtime-tokio"]}
dirs = "6.0.0"
async-fs = "2.1.3"
snowflaked = {version = "1.0.3", features = ["sync"]}
infer = "0.19.0"
mime_guess2 = "2.3.1"
rfd = {version = "0.15.4"}
unicode-segmentation = "1.12.0"
actix-files = "0.6.6"
qrcode = "0.14.1"
local-ip-address = "0.6.5"
image = "0.25.6"
clipboard-rs = "0.3.0"
strum = { version = "0.27.2", features = ["derive"] }
futures-util = "0.3.31"
sha2 = "0.10.9"
chrono = "0.4.41"
actix-multipart = "0.7.2"
sea-query = "0.32.7"
uds_windows = "1.1.0"
